[gd_scene load_steps=8 format=2]

[ext_resource path="res://res/fonts/charybdis/Charybdis.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://res/ui/money.png" type="Texture" id=2]
[ext_resource path="res://menus/EndOfGame.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="EndOfGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 238.0
margin_top = 78.0
margin_right = 785.0
margin_bottom = 522.0
custom_constants/separation = 50

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 547.0
margin_bottom = 60.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 78.0
margin_right = 468.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "End of the game"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 547.0
margin_bottom = 339.0
custom_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 247.0
margin_bottom = 229.0
custom_constants/separation = 50
alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 247.0
margin_bottom = 84.0

[node name="Died Floor" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2"]
margin_right = 247.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "You died at floor 0"
align = 1
valign = 1

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 247.0
margin_bottom = 174.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer3"]
margin_left = 21.0
margin_right = 225.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="Money" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_top = 3.0
margin_right = 154.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "You get : 0"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 164.0
margin_right = 204.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 297.0
margin_right = 547.0
margin_bottom = 229.0
custom_constants/separation = 50
alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 250.0
margin_bottom = 30.0

[node name="Difficulty" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CenterContainer2"]
margin_left = 14.0
margin_right = 235.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Difficulty : Baby"
align = 1
valign = 1

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 80.0
margin_right = 250.0
margin_bottom = 110.0

[node name="Arcade_Record" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CenterContainer4"]
margin_left = 40.0
margin_right = 209.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Highscore : 0"
align = 1
valign = 1

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 160.0
margin_right = 250.0
margin_bottom = 229.0

[node name="Arcade_Record_Month" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CenterContainer3"]
margin_right = 250.0
margin_bottom = 69.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
text = "Highscore in this month : 0"
align = 1
valign = 1
autowrap = true

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 389.0
margin_right = 547.0
margin_bottom = 444.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 148.0
margin_right = 398.0
margin_bottom = 55.0
custom_constants/separation = 50

[node name="BtMenu" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 100.0
margin_bottom = 55.0
rect_min_size = Vector2( 100, 55 )
custom_fonts/font = SubResource( 4 )
text = "Menu"

[node name="BtRetry" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 55.0
rect_min_size = Vector2( 100, 55 )
custom_fonts/font = SubResource( 4 )
text = "Retry"
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer/BtMenu" to="." method="_on_BtMenu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer/BtRetry" to="." method="_on_BtRetry_pressed"]
